name:                ExifRenamer
version:             0.1.0.0
synopsis:            Rename image files based on their original capture date.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (c) 2013 Anthony Cowley
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable ExifRenamer
  main-is:             Main.hs
  hs-source-dirs:      src
  other-modules:       Args
  build-depends:       base >= 4.6 && < 5, transformers >= 0.3, mtl >= 2.1,
                       containers >= 0.5, time >= 1.4, old-locale >= 1.0,
                       exif >= 3000.0, directory >= 1.2, filepath >= 1.3,
                       filemanip >= 0.3
  default-language:    Haskell2010